--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -27,10 +27,16 @@
                         @using (Html.BeginForm())
                         {
                             <!-- Buscador -->
-                            <p>
-                                @Html.TextBox("SearchString", "", new { placeholder= "Nombre del curso"})
-                                <input type="submit" value="Buscar" />
-                            </p>
+                        <p>
+                            <label>Unidad Academica:</label> @Html.DropDownList("unidadAcademica", null, "<Seleccione Unidad Académica>", new { @class = "form-control" })
+                            <label> Carreras: </label> @Html.DropDownList("nombreCarrera", null, "<Seleccione Carrera>", new { @class = "form-control" })
+                            <label> Cursos: </label> @Html.DropDownList("nombreCurso", null, "<Seleccione Curso>", new { @class = "form-control" })
+                           @* <label> Semestre: </label> @Html.DropDownList("semestre", null, "<Seleccione Semestre>", new { @class = "form-control" })*@
+                           @* <label> Año: </label> @Html.DropDownList("ano", null, "<Seleccione Año>", new { @class = "form-control" })<br />*@
+                            @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
+
+                            <input type="submit" value="Buscar" />
+                        </p>
                         }
 
                     </div>
