--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -62,8 +62,8 @@
         </div>
     }
 
-    @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
-    {
+   @using (Ajax.BeginForm("AsignacionFormularioGrupo", "AsignarFormularios", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "asign-content"}))
+   {
         <div class="row">
             <div class="col-sm-8">
                 <div class="panel panel-default">
@@ -142,93 +142,44 @@
         </div>
 
         @*<div align='center'>
-            <input type="submit" name="Asignar" id="Asignar" value="Asignar" />
-        </div>*@
+                <input type="submit" name="Asignar" id="Asignar" value="Asignar" />
+            </div>*@
 
         <div align='center'>
+            <input type="submit" value="Asignar" />
             <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalReporte">Reporte de asignaciones</button>
         </div>
-    }
-</div>
 
 
-<!-- Modal -->
-<div id="modalReporte" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+    <!-- Modal -->
+    <div id="modalReporte" class="modal fade" role="dialog">
+        <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
+            <!-- Modal content-->
+            <div class="modal-content">
 
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Asignaciones de formularios realizadas para el SEMESTRE-AÑO</h4>
-            </div>
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Asignaciones de formularios realizadas para el SEMESTRE-AÑO</h4>
+                </div>
 
-            <div class="modal-body">
-                <p>Mostrar aquí los grupos y los formularios.</p>
+                <div class="modal-body">
+                    <p>Mostrar aquí los grupos y los formularios.</p>
 
-                <table class="fixed_header">
-                    <thead>
-                        <tr>
-                            <th align='center'>
-                                <div align='center'>Curso</div>
-                            </th>
-                            <th align='center'>
-                                <div align='center'>Grupo</div>
-                            </th>
-                            <th align='center'>
-                                <div align='center'>Profesor</div>
-                            </th>
-                            <th align='center'>
-                                <div align='center'>Formularios asignados</div>
-                            </th>
-                        </tr>
-                    </thead>
+                    <div id="asign-content">
+                        @Html.Partial("AsignacionFormularioGrupo", Model.GruFormsSeleccionados)
+                    </div>
 
+                </div>
 
-                    <tbody>
-                       @foreach(var gr in Model.GruposSeleccionados)
-                        {
-                        <tr>
-                            <td align='center'>
-                                <div align='center'>
-                                    @Html.DisplayFor(ModelItem => gr.SiglaCurso)<span> </span>@Html.DisplayFor(ModelItem => gr.NombreCurso)
-                                </div>
-                            </td>
-                            <td align='center'>
-                                <div align='center'>@Html.DisplayFor(ModelItem => gr.Numero)</div>
-                            </td>
-                            <td align='center'>
-                               @foreach (var profe in gr.Profesores)
-                                {
-                                <div align='center'>
-                                    @Html.DisplayFor(ModelItem => profe.Persona.Nombre) <span> </span>
-                                    @Html.DisplayFor(ModelItem => profe.Persona.Apellido1) <span> </span>
-                                    @Html.DisplayFor(ModelItem => profe.Persona.Apellido2) <br>
-                                </div>
-                                }
-                            </td>
-                            <td align='center'>
-                               @foreach (var form in Model.FormulariosSeleccionados)
-                                {
-                                <div align='center'>
-                                    @Html.DisplayFor(ModelItem => form.CodigoFormulario) <span> </span>
-                                    @Html.DisplayFor(ModelItem => form.NombreFormulario) <br>
-                                </div>
-                                }
-                            </td>
-                        </tr>
-                        }
-                    </tbody>
-                </table>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
 
-            </div>
-
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
             </div>
 
         </div>
-
     </div>
+    }
+
 </div>
