--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 @Styles.Render("~/Content/scrollbar-tabla.css")
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryval")﻿
+@Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")﻿
 
 <div>
     <h1 align="center">Asignación de herramientas de evaluación</h1>
@@ -62,8 +65,8 @@
         </div>
     }
 
-   @using (Ajax.BeginForm("AsignacionFormularioGrupo", "AsignarFormularios", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "asign-content"}))
-   {
+    @using (Ajax.BeginForm("AsignacionFormularioGrupo", "AsignarFormularios", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "asign-content" }))
+    {
         <div class="row">
             <div class="col-sm-8">
                 <div class="panel panel-default">
@@ -151,35 +154,35 @@
         </div>
 
 
-    <!-- Modal -->
-    <div id="modalReporte" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+        <!-- Modal -->
+        <div id="modalReporte" class="modal fade" role="dialog">
+            <div class="modal-dialog">
 
-            <!-- Modal content-->
-            <div class="modal-content">
+                <!-- Modal content-->
+                <div class="modal-content">
 
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Asignaciones de formularios realizadas para el SEMESTRE-AÑO</h4>
-                </div>
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Asignaciones de formularios realizadas para el SEMESTRE-AÑO</h4>
+                    </div>
 
-                <div class="modal-body">
-                    <p>Mostrar aquí los grupos y los formularios.</p>
+                    <div class="modal-body">
+                        <p>Mostrar aquí los grupos y los formularios.</p>
 
-                    <div id="asign-content">
-                        @Html.Partial("AsignacionFormularioGrupo", Model.GruFormsSeleccionados)
+                        <div id="asign-content">
+                            @Html.Partial("AsignacionFormularioGrupo", Model.GruFormsSeleccionados)
+                        </div>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                     </div>
 
                 </div>
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                </div>
-
             </div>
-
         </div>
-    </div>
     }
 
 </div>
