--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Index.cshtml
@@ -9,8 +9,7 @@
 @using (Html.BeginForm())
 {
 
-<h2>Seleccione el perfil al que desea ingresar</h2>
-<br />
+<h2>Seleccione un perfil</h2>
 <br />
   
        List<SelectListItem> lista = new List<SelectListItem>();
@@ -25,13 +24,13 @@
  
 
 
-        @Html.DropDownListFor(Model => Model.perfilSeleccionado, lista, htmlAttributes: new { @class = "form-control" })
+    @Html.DropDownListFor(Model => Model.perfilSeleccionado, lista, htmlAttributes: new { @class = "form-control" })
 
     <br />
     <br />
 
-<input type="submit" value="Aceptar" class="btn btn-default" style=" margin-right:10px" />
-@Html.ActionLink("Cancelar", "Index", "Home","",new { @class = "btn btn-default" })
+    <input type="submit" value="Aceptar" class="btn btn-default" style=" margin-right:10px" />
+    @Html.ActionLink("Cancelar", "Index", "Home","",new { @class = "btn btn-default" })
 
 }
 
