--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -3,6 +3,19 @@
 @{
     ViewBag.Title = "Details";
 }
+<head>
+    <script src="~/Scripts/Chart.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <style>
+        #contenedorGrafo{
+            width: 400px;
+            height: 400px;
+            border: 1px solid #ddd;
+            padding: 1px;
+            border-radius: 4px;
+        }
+    </style>
+</head>
 
 @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
 
@@ -26,7 +39,7 @@
             @Html.DisplayFor(modelItem => title.Grupo.Curso.Nombre)
 
             <span style="float:right;">
-                <b>Semestre:</b> 
+                <b>Semestre:</b>
                 @Html.DisplayFor(modelItem => title.Grupo.SemestreGrupo)
 
                 <b>Año:</b>
@@ -104,7 +117,60 @@
                                                 @if (seccion.Item.TipoPregunta != 1)
                                                 {
                                                     <p>Resultados</p> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
-                                                    <p>@("graficarResultados('@seccion.Item.ItemId')")</p>
+                                                    //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
+                                                    <div id="contenedorGrafo">
+                                                        <canvas id="pie_chart_@item_actual"></canvas>
+                                                    </div>
+                                                    <script>
+                                                        $.ajax({
+                                                            type: "POST",
+                                                            url: "/VisualizarFormulario/GraficoPie/?itemId=@seccion.Item.ItemId",
+                                                            //data{ itemId: @seccion.Item.ItemId },
+                                                            contentType: "application/json; charset=utf-8",
+                                                            dataType: "json",
+                                                            success: function (chData) {
+                                                                var aData = chData;
+                                                                var aLabels = aData[0];
+                                                                var aDatasets1 = aData[1];
+                                                                var dataT = {
+                                                                    labels: aLabels,
+                                                                    datasets: [{
+                                                                        label: "Prueba",
+                                                                        data: aDatasets1,
+                                                                        fill: false,
+                                                                        backgroundColor: [
+                                                                            'rgba(255, 99, 132, 0.2)',
+                                                                            'rgba(54, 162, 235, 0.2)',
+                                                                            'rgba(255, 206, 86, 0.2)',
+                                                                            'rgba(75, 192, 192, 0.2)',
+                                                                            'rgba(153, 102, 255, 0.2)',
+                                                                            'rgba(255, 159, 64, 0.2)'
+                                                                        ],
+                                                                        borderColor: [
+                                                                            'rgba(255, 99, 132, 1)',
+                                                                            'rgba(54, 162, 235, 1)',
+                                                                            'rgba(255, 206, 86, 1)',
+                                                                            'rgba(75, 192, 192, 1)',
+                                                                            'rgba(153, 102, 255, 1)',
+                                                                            'rgba(255, 159, 64, 1)'
+                                                                        ],
+                                                                        borderWidth: 1
+                                                                    }]
+                                                                };
+                                                                var ctx = $("#pie_chart_@item_actual").get(0).getContext("2d");
+                                                                var barChart = new Chart(ctx, {
+                                                                    type: 'pie',
+                                                                    data: dataT,
+                                                                    options: {
+                                                                        responsive: true,
+                                                                        maintainAspectRatio: false,
+                                                                        scales: { xAxes: [{ ticks: { beginAtZero: true } }] },
+                                                                        legend: { display: false },
+                                                                    },
+                                                                })
+                                                            }
+                                                        });
+                                                    </script>
                                                 }
                                                 else
                                                 {
@@ -172,6 +238,6 @@
 
 <script src="~/Scripts/Graficar.js"></script>
 @*<script>function graficarResultados(itemId) {
-    alert(itemId);
-    $.get("/VisualizarFormulario/GraficoPie", { itemId });
-}</script>*@ 
+        alert(itemId);
+        $.get("/VisualizarFormulario/GraficoPie", { itemId });
+    }</script>*@ 
